# assets/schemas/openapi.json
@@ -13,36 +13,6 @@
     "version": "1.0.0"
   },
   "paths": {
-    "/v1/admin/cas/gc": {
-      "post": {
-        "tags": [
-          "admin"
-        ],
-        "operationId": "gc_cas",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/GcCasRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GcCasResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/v1/admin/deployments/retain": {
       "post": {
         "tags": [
@@ -3028,45 +2998,6 @@
           "ffqn": {
             "type": "string",
             "description": "Fully qualified function name"
-          }
-        }
-      },
-      "GcCasRequest": {
-        "type": "object",
-        "properties": {
-          "dry_run": {
-            "type": "boolean"
-          }
-        }
-      },
-      "GcCasResponse": {
-        "type": "object",
-        "required": [
-          "referenced_blobs",
-          "orphan_blobs",
-          "deleted_blobs",
-          "deleted_bytes"
-        ],
-        "properties": {
-          "deleted_blobs": {
-            "type": "integer",
-            "format": "int64",
-            "minimum": 0
-          },
-          "deleted_bytes": {
-            "type": "integer",
-            "format": "int64",
-            "minimum": 0
-          },
-          "orphan_blobs": {
-            "type": "integer",
-            "format": "int64",
-            "minimum": 0
-          },
-          "referenced_blobs": {
-            "type": "integer",
-            "format": "int64",
-            "minimum": 0
           }
         }
       },
